# onchain-cli-calculator

./: Anchor.toml
programs/onchain-cli-calculator/: Cargo.toml
programs/onchain-cli-calculator/src/: errors.rs  events.rs  lib.rs  state.rs
programs/onchain-cli-calculator/src/instructions/: add.rs  initialize.rs  mod.rs
tests/: onchain-cli-calculator.ts
